--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
     <!-- Compiled and minified JavaScript -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="app.js"></script>
