--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
               <li class="collection-item">JS <a href = "#" class = "blue-text text-darken 2 secondary-content">X</a></li>
               <li class="collection-item">Node.js <a href = "#" class = "blue-text text-darken 2 secondary-content">X</a></li>
             </ul>
+            <div>
+              <a href = "#" class = "button" id="del-tasks">Delete all</a>
+            </div>
           </div>
         </div>
       </div>
