As a user I can filter tasks [delivers #183504653]

--- a/index.html
+++ b/index.html
@@ -32,6 +32,12 @@
               </div>
             </form>
           </div>
+          <div class="row">
+            <div class="input-field col s6">
+              <input type="text" id="filterThings" onkeyup="filterList()" placeholder="Search list.." >
+              <label for="task">Filter tasks</label>
+            </div>
+          </div>
         </div>
         <div class="card-action">
           <span class="card-title" id="task-title">My Tasks</span>
